--- a/_config.yml
+++ b/_config.yml
@@ -202,6 +202,12 @@ exclude:
   - /vendor
 
 defaults:
+  ## home
+  - scope:
+      path: "test"
+    values:
+      articles:
+        excerpt_type: html
   - scope:
       path: ""
       type: posts
