--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@
 
 ## => Site Settings
 ##############################
-text_skin: orange # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : 4rtist3 blog
+title   : 4rtist3
 description: > # this means to ignore newlines until "Language & timezone"
   Crypto is not currency.
 
